--- a/vannillajs-form-validation/index.html
+++ b/vannillajs-form-validation/index.html
@@ -3,10 +3,36 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style.css"
-	<title>Form validation</title>
+	<link rel="stylesheet" href="style.css">
+	<title>Form Validation</title>
 </head>
 <body>
-	
+	<div class="container">
+		<form action="" id="form" class="form">
+			<h2>Register With Us</h2>
+			<div class="form-control">
+				<label for="username">Username</label>
+				<input type="text" id="username" placeholder="Enter preferred username">
+				<small>Error message</small>
+			</div>
+			<div class="form-control">
+				<label for="email">Email</label>
+				<input type="text" id="email" placeholder="Enter your email here">
+				<small> Error message</small>
+			</div>
+			<div class="form-control">
+				<label for="password">Password</label>
+				<input type="password" id="password" placeholder="Enter your preferred password">
+				<small>Error message</small>
+			</div>
+			<div class="form-control">
+				<label for="password2">Confirm Password</label>
+				<input type="password2" id="password2" placeholder="Repeat your preferred password">
+				<small>Error message</small>
+			</div>
+			<button class="button">Submit</button>
+		</form>
+	</div>
+	<script src="main.js"></script>
 </body>
 </html>
